tests/codegen/fail/union/trait_no_fields.rs
use coasys_juniper::graphql_union;

#[graphql_union]
trait Character {}

fn main() {}
